style: Apply spring-javaformat across entire codebase
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>